kubernetes/app-stg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-stg-deployment
  labels:
    app: nodeapp-stg
spec:
  selector:
    matchLabels:
      app: nodeapp-stg
  template:
    metadata:
      labels:
        app: nodeapp-stg
    spec:
      containers:
      - name: nodeapp-stg
        image: docker.io/mhcamillow/node:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-stg-nodeport
spec:
  type: NodePort
  selector:
    app: nodeapp-stg
  ports:
    - port: 8080
      targetPort: 8080
